--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -1,3 +1,88 @@
+@import "../../global.scss";
 .topbar{
-    background-color: lightcoral;
+    background-color: white;
+    color:$mainColor;
+    height: 70px;
+    width: 100%;
+    position: fixed;
+    top:0;
+    z-index: 1;
+    transition: background-color .5s ease;
+
+    .wrapper{
+        padding:10px 30px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        .left{
+            display: flex;
+            align-items: center;
+            .logo{
+                font-size: 40px;
+                font-weight: 700;
+                text-decoration: none;
+                color: inherit;
+                margin-right: 40px;
+            }
+
+            .itemContainer{
+                display: flex;
+                align-items: center;
+                margin-left:30px ;
+
+                .icon{
+                    font-size: 30px;
+                    margin-right: 5px;
+                }
+
+                span{
+                    font-size: 14px;
+                    font-weight: 500;
+                }
+            }
+        }
+
+        .right{
+
+            .hamburger{
+                width: 32px;
+                height: 25px;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                cursor: pointer;
+
+
+                span{
+                    width: 100%;
+                    height: 3px;
+                    background-color: $mainColor;
+                    transform-origin: left;
+                    transition: all .5s ease;
+                }
+            }
+        }
+    }
+
+    &.active{
+        background-color: $mainColor;
+        color: white;
+
+        .hamburger{
+            span{
+                &:first-child{
+                    background-color: white;
+                    transform: rotate(45deg);
+                }
+                &:nth-child(2){
+                    opacity: 0;
+                }
+                &:last-child{
+                    background-color: white;
+                    transform: rotate(-45deg);
+                }
+            }
+        }
+    }
 }
