--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,3 +1,110 @@
 .intro{
-    background-color: lightblue;
+    background-color: white;
+    display: flex;
+
+    .left{
+        flex:.5;
+        overflow: hidden;
+
+        .imgContainer{
+            width: 700px;
+            height: 700px;
+            background-color: crimson;
+            border-radius: 50%;
+            display: flex;
+            align-items: flex-end;
+            justify-content: center;
+            float: right;
+
+            img{
+                height: 90%;
+            }
+        }
+
+    }
+    .right{
+        flex:.5;
+        
+        position: relative;
+        .wrapper{
+            width: 100%;
+            height: 100%;
+            padding-left: 50px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            box-sizing: border-box;
+            h1{
+                font-size: 50px;
+                margin: 10px 0;
+                font-weight: 500;
+            }
+            h2{
+                font-size: 35px;
+                font-weight: 100;
+            }
+            h3{
+                margin-top: 20px;
+                font-size: 25px;
+                font-style: italic;
+
+                
+            }
+            h4{
+                margin-top: 20px;
+            }
+            .jokeTxt{
+                margin-top: 30px;
+                font-size: 20px;
+                color: crimson;
+            }
+            .ityped-cursor{
+                font-size: 30px;
+                margin-left: 5px;
+                opacity: 1;
+                -webkit-animation: blink 0.3s infinite;
+                -moz-animation: blink 0.3s infinite;
+                animation: blink 0.3s infinite;
+                animation-direction: alternate;
+            }
+             
+            @keyframes blink {
+                100% {
+                    opacity: 0;
+                }
+            }
+             
+            @-webkit-keyframes blink {
+                100% {
+                    opacity: 0;
+                }
+            }
+             
+            @-moz-keyframes blink {
+                100% {
+                    opacity: 0;
+                }
+            }
+            
+            
+
+        }
+
+        a{
+            position: absolute;
+            bottom: 10px;
+            left: calc(50% - 25px);
+
+            img{
+                width: 30px;
+                animation: arrowBlink 1.2s infinite;
+            }
+
+            @keyframes arrowBlink {
+                100%{
+                    opacity: 0;
+                }
+            }
+        }
+    }
 }
