--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -5,19 +5,20 @@
     .left{
         flex:.5;
         overflow: hidden;
-
+        display: flex;
+        align-items: flex-end;
         .imgContainer{
             width: 700px;
             height: 700px;
             background-color: crimson;
             border-radius: 50%;
             display: flex;
-            align-items: flex-end;
+            // align-items: flex-end;
             justify-content: center;
             float: right;
 
             img{
-                height: 90%;
+                height: 100%;
             }
         }
 
@@ -47,15 +48,16 @@
                 margin-top: 20px;
                 font-size: 25px;
                 font-style: italic;
-
-                
             }
             h4{
                 margin-top: 20px;
             }
-            .jokeTxt{
+            .h3, .redTxt{
+                font-size: 25px;
+            }
+            .redTxt{
                 margin-top: 30px;
-                font-size: 20px;
+                
                 color: crimson;
             }
             .ityped-cursor{
