--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -1,3 +1,71 @@
+@import "../../global.scss";
 .portfolio{
     background-color: lightgrey;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .h1{
+        margin-top: 30px;
+        font-size: 50px;
+        font-weight: 500;
+    }
+
+    ul{
+        margin: 10px;
+        padding: 0;
+        list-style: none;
+        display: flex;
+
+
+    }
+    .container{
+        width: 70%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+
+        .item{
+            width: 220px;
+            height: 150px;
+            border-radius: 5px;
+            border:1px solid white;
+            margin: 10px 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            position: relative;
+            transition: all .5s linear;
+            cursor: pointer;
+
+            h3{
+                position: absolute;
+                font-size: 30px;
+            }
+    
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                z-index: 1;
+                border-radius: 5px;
+               
+            }
+            &:hover{
+                background-color: $mainColor;
+                img{
+                    opacity: .4;
+                    z-index: 0;
+                }
+            }
+        }
+
+       
+
+        
+
+        
+    }
 }
