--- a/src/app.scss
+++ b/src/app.scss
@@ -7,6 +7,17 @@
 .app{
   height: 100vh;
 
+  h1, .h1{
+    font-size: 50px;
+  }
+
+  h2, .h2{
+    font-size: 35px;
+  }
+  h3, .h3, .typedTxt{
+    font-size: 25px;
+  }
+
   .sections{
     width: 100%;
     height: calc(100vh - 70px);
