--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -35,29 +35,24 @@
             flex-direction: column;
             justify-content: center;
             box-sizing: border-box;
-            h1{
-                font-size: 50px;
+            h1{           
                 margin: 10px 0;
                 font-weight: 500;
             }
-            h2{
-                font-size: 35px;
+            h2{                
                 font-weight: 100;
             }
             h3{
                 margin-top: 20px;
-                font-size: 25px;
+
                 font-style: italic;
             }
             h4{
                 margin-top: 20px;
             }
-            .h3, .redTxt{
-                font-size: 25px;
-            }
-            .redTxt{
-                margin-top: 30px;
-                
+
+            .typedTxt{
+                margin-top: 30px;                
                 color: crimson;
             }
             .ityped-cursor{
