--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -7,7 +7,6 @@
 
     .h1{
         margin-top: 30px;
-        font-size: 50px;
         font-weight: 500;
     }
 
@@ -16,19 +15,17 @@
         padding: 0;
         list-style: none;
         display: flex;
-
-
     }
     .container{
         width: 70%;
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: start;
         flex-wrap: wrap;
 
         .item{
             width: 220px;
-            height: 150px;
+            height: 180px;
             border-radius: 5px;
             border:1px solid white;
             margin: 10px 20px;
@@ -42,7 +39,6 @@
 
             h3{
                 position: absolute;
-                font-size: 30px;
             }
     
             img{
@@ -61,11 +57,5 @@
                 }
             }
         }
-
-       
-
-        
-
-        
     }
 }
