--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -1,3 +1,107 @@
 .works{
-    background-color: lightgreen;
+    background-color: lightsalmon;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+
+    .arrow{
+        height: 50px;
+        position: absolute;
+        cursor: pointer;
+
+        &.left{
+            left: 100px;
+            transform: rotate(180deg);
+        }
+
+        &.right{
+            right: 100px;
+            
+        }
+    }
+
+    .slider{
+        height: 350px;
+        display: flex;
+        position: absolute;
+        left: 0;
+
+        .container{
+            width: 100vw;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            .item{
+                width: 700px;
+                height: 100%;
+                background-color: whitesmoke;
+                border-radius: 20px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+                .left{
+                    flex:4;
+                    height: 80%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+
+                    .leftContainer{
+                        width: 90%;
+                        height: 70%;
+                        display: flex;
+                        align-content: center;
+                        justify-content: space-between;
+                        flex-direction: column;
+
+                        .imgContainer{
+                            width: 40px;
+                            height: 40px;
+                            border-radius: 50%;
+                            background-color: lightcoral;
+                            align-items: center;
+                            justify-content: center;
+                            display: flex;
+
+                            img{
+                                width: 25px;
+                            }
+                        }
+
+                        h2{
+                            font-size: 30px;
+                        }
+                        p{
+                            font-size: 12px;
+                        }
+                        span{
+                            font-size: 12px;
+                            font-weight: 500;
+                            text-decoration: underline;
+                            cursor: pointer;
+                        }
+                    }
+                }
+                .right{
+                    flex:8;
+                    height: 100%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    overflow: hidden;
+                    
+                    img{
+                        width: 400px;
+                        transform: rotate(-10deg);
+
+                    }
+                }
+            }
+        }
+    }
+
+
 }
