--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,4 @@
+@import "global.scss";
 *{
   /* font-family: 'Nothing You Could Do', cursive;
   font-family: 'Permanent Marker', cursive; */
@@ -8,14 +9,20 @@
   height: 100vh;
 
   h1, .h1{
+    margin-top: 30px;
     font-size: 50px;
+    color: $mainColor;
   }
 
   h2, .h2{
+    margin-top: 20px;
     font-size: 35px;
+    color: $mainColor;
   }
   h3, .h3, .typedTxt{
+    margin-top: 10px;
     font-size: 25px;
+    
   }
 
   .sections{
@@ -36,8 +43,9 @@
 
     > *{
       width: 100%;
-      height: calc(100vh - 70px);
+      min-height: calc(100vh - 70px);
       scroll-snap-align: start;
+      padding-bottom: 20px;
     }
   }
 }
