--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -17,11 +17,12 @@
         display: flex;
     }
     .container{
-        width: 70%;
+        width: 80%;
         display: flex;
         align-items: center;
-        justify-content: start;
+        justify-content: center;
         flex-wrap: wrap;
+
 
         .item{
             width: 220px;
@@ -39,6 +40,7 @@
 
             h3{
                 position: absolute;
+                text-align: center;
             }
     
             img{
