--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -3,105 +3,122 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    position: relative;
-
-    .arrow{
-        height: 50px;
-        position: absolute;
-        cursor: pointer;
-
-        &.left{
-            left: 100px;
-            transform: rotate(180deg);
-        }
-
-        &.right{
-            right: 100px;
-            
-        }
-    }
-
-    .slider{
-        height: 350px;
+    flex-direction: column;
+    height: 100%;
+    
+    .sliderContainer{
         display: flex;
-        position: absolute;
-        left: 0;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        overflow: hidden;
+        height: 100%;
+        width: 100%;
+    }
+    
 
-        .container{
-            width: 100vw;
+        .arrow{
+            height: 50px;
+            position: absolute;
+            cursor: pointer;
+
+            &.left{
+                left: 100px;
+                transform: rotate(180deg);
+            }
+
+            &.right{
+                right: 100px;
+                
+            }
+        }
+
+        .slider{
+            height: 350px;
             display: flex;
-            align-items: center;
-            justify-content: center;
+            position: absolute;
+            left: 0;
+            transition: .5s all linear;
 
-            .item{
-                width: 700px;
-                height: 100%;
-                background-color: whitesmoke;
-                border-radius: 20px;
+            .container{
+                width: 100vw;
                 display: flex;
                 align-items: center;
                 justify-content: center;
-
-                .left{
-                    flex:4;
-                    height: 80%;
+                opacity: 0;
+                transition: .5s opacity linear;
+            &.current{
+                opacity: 1;
+            }    
+                .item{
+                    width: 700px;
+                    height: 100%;
+                    background-color: whitesmoke;
+                    border-radius: 20px;
                     display: flex;
                     align-items: center;
                     justify-content: center;
 
-                    .leftContainer{
-                        width: 90%;
-                        height: 70%;
+                    .left{
+                        flex:4;
+                        height: 80%;
                         display: flex;
-                        align-content: center;
-                        justify-content: space-between;
-                        flex-direction: column;
+                        align-items: center;
+                        justify-content: center;
 
-                        .imgContainer{
-                            width: 40px;
-                            height: 40px;
-                            border-radius: 50%;
-                            background-color: lightcoral;
-                            align-items: center;
-                            justify-content: center;
+                        .leftContainer{
+                            width: 90%;
+                            height: 70%;
                             display: flex;
+                            align-content: center;
+                            justify-content: space-between;
+                            flex-direction: column;
 
-                            img{
-                                width: 25px;
+                            .imgContainer{
+                                width: 40px;
+                                height: 40px;
+                                border-radius: 50%;
+                                background-color: lightcoral;
+                                align-items: center;
+                                justify-content: center;
+                                display: flex;
+
+                                img{
+                                    width: 25px;
+                                }
+                            }
+
+                            h2{
+                                font-size: 30px;
+                            }
+                            p{
+                                font-size: 12px;
+                            }
+                            span{
+                                font-size: 12px;
+                                font-weight: 500;
+                                text-decoration: underline;
+                                cursor: pointer;
                             }
                         }
-
-                        h2{
-                            font-size: 30px;
-                        }
-                        p{
-                            font-size: 12px;
-                        }
-                        span{
-                            font-size: 12px;
-                            font-weight: 500;
-                            text-decoration: underline;
-                            cursor: pointer;
-                        }
                     }
-                }
-                .right{
-                    flex:8;
-                    height: 100%;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    overflow: hidden;
-                    
-                    img{
-                        width: 400px;
-                        transform: rotate(-10deg);
+                    .right{
+                        flex:8;
+                        height: 100%;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        overflow: hidden;
+                        
+                        img{
+                            width: 400px;
+                            transform: rotate(-10deg);
 
+                        }
                     }
                 }
             }
         }
-    }
 
 
 }
