--- a/src/app.scss
+++ b/src/app.scss
@@ -10,19 +10,34 @@
 
   h1, .h1{
     margin-top: 30px;
+    margin-bottom: 30px;
     font-size: 50px;
     color: $mainColor;
+    font-weight: 500;
+
+    @include mobile{
+      font-size: 40px;
+    }
   }
 
   h2, .h2{
     margin-top: 20px;
+    margin-bottom: 20px;
     font-size: 35px;
     color: $mainColor;
+
+    @include mobile{
+      font-size: 30px;
+    }
   }
   h3, .h3, .typedTxt{
     margin-top: 10px;
+    margin-top: 10px;
     font-size: 25px;
     
+    @include mobile{
+      font-size: 20px;
+    }
   }
 
   .sections{
@@ -34,6 +49,7 @@
     scroll-behavior: smooth;
     scroll-snap-type: y mandatory;
     overflow-y: scroll;
+    
 
     
     // scrollbar-width: none;  
@@ -45,7 +61,7 @@
       width: 100%;
       min-height: calc(100vh - 70px);
       scroll-snap-align: start;
-      padding-bottom: 20px;
+      padding-bottom: 30px;
     }
   }
 }
