--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,7 +1,14 @@
+@import "../../global.scss";
 .intro{
     background-color: white;
     display: flex;
     height: calc(100vh - 70px);
+
+    @include mobile{
+        flex-direction: column;
+        align-items: center;
+    }
+
     .left{
         flex:.5;
         overflow: hidden;
@@ -10,7 +17,7 @@
         .imgContainer{
             //width: 700px;
             height: 500px;
-            background-color: #009688;
+            //background-color: $mainColor;
             border-radius: 50%;
             //display: flex;
             // align-items: flex-end;
@@ -19,6 +26,10 @@
 
             img{
                 height: 100%;
+
+                @include mobile{
+                    margin-top: 70px;
+                }
             }
         }
 
@@ -35,6 +46,11 @@
             flex-direction: column;
             justify-content: center;
             box-sizing: border-box;
+
+            @include mobile{
+                padding-left: 0;
+                align-items: center;
+            }
             h1{           
                 margin: 10px 0;
                 font-weight: 500;
