--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -4,20 +4,24 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 
-    .h1{
-        margin-top: 30px;
-        font-weight: 500;
-    }
+
 
     ul{
-        margin: 10px;
+        margin: 10px 0;
         padding: 0;
         list-style: none;
         display: flex;
+        justify-content: center;
+        width: 90%;
+
+        li{
+            margin: 0 15px;
+        }
     }
     .container{
-        width: 80%;
+        width: 90%;
         display: flex;
         align-items: center;
         justify-content: center;
