--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -6,7 +6,7 @@
     width: 100%;
     position: fixed;
     top:0;
-    z-index: 3;
+    z-index: 6;
     transition: background-color .5s ease;
 
     .wrapper{
@@ -31,6 +31,9 @@
                 align-items: center;
                 margin-left:30px ;
 
+                @include mobile{
+                    display: none;
+                }
                 .icon{
                     font-size: 30px;
                     margin-right: 5px;
