--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -1,3 +1,4 @@
+@import "../../global.scss";
 .works{
     background-color: lightsalmon;
     display: flex;
@@ -5,31 +6,35 @@
     justify-content: center;
     flex-direction: column;
     height: 100%;
-    
+    padding-bottom: 20px;
+
     .sliderContainer{
         display: flex;
         align-items: center;
         justify-content: center;
         position: relative;
         overflow: hidden;
-        height: 100%;
+        height: 60%;
         width: 100%;
     }
     
 
         .arrow{
-            height: 50px;
+            height: 30px;
             position: absolute;
             cursor: pointer;
 
             &.left{
-                left: 100px;
+                left: 20px;
                 transform: rotate(180deg);
+                background-color: rgba(0, 0, 0, 0.3);
+                padding:5px 
             }
 
             &.right{
-                right: 100px;
-                
+                right: 20px;
+                background-color: rgba(0, 0, 0, 0.3);
+                padding:5px 
             }
         }
 
@@ -51,13 +56,18 @@
                 opacity: 1;
             }    
                 .item{
-                    width: 700px;
+                    width: 90%;
                     height: 100%;
                     background-color: whitesmoke;
                     border-radius: 20px;
                     display: flex;
                     align-items: center;
                     justify-content: center;
+                    overflow: hidden;
+
+                    @include mobile{
+                        flex-direction: column-reverse;
+                    }
 
                     .left{
                         flex:4;
@@ -65,6 +75,10 @@
                         display: flex;
                         align-items: center;
                         justify-content: center;
+                       
+                        @include mobile{
+                            flex:6;
+                        }
 
                         .leftContainer{
                             width: 90%;
@@ -109,7 +123,9 @@
                         align-items: center;
                         justify-content: center;
                         overflow: hidden;
-                        
+                        @include mobile{
+                            flex:4;
+                        }
                         img{
                             width: 400px;
                             transform: rotate(-10deg);
